# idontneedit

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.override.yml  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ansible/: Caddyfile  deploy.yml  env.j2  idontneedit.service  inventory.ini  secrets.yml
config/: settings.py  urls.py  views.py
