[project]
name = "idontneedit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==6.0rc1",
    "django-dotenv>=1.4.2",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pre-commit>=4.5.0",
]
